# picohellousb

./: .gitignore  .gitmodules  .gn  BUILD.gn  BUILDCONFIG.gn  CMakeLists.txt  README.md  bootstrap.bat  bootstrap.sh  buildcmake.sh  env_setup.json  hello_usb.c  pico_sdk_import.cmake
applications/blinky/: BUILD.gn  main.cc
build_overrides/: pigweed.gni
pico_build/: BUILD.gn  bs2_default_padded_checksummed.S
pico_build/bs2_default/: BUILD.gn
pico_build/public_overrides/pico/: config_autogen.h  version.h
pico_build/py/: BUILD.gn  setup.cfg  setup.py
pico_build/py/pico_build/: generate_bs2.py
pico_build/py/pico_build/templates/: bs2.jinja
pw_board_led/public/pw_board_led/: led.h
pw_board_led_pico/: BUILD.gn  led.cc
pw_spin_delay/public/pw_spin_delay/: delay.h
pw_spin_delay_host/: delay.cc
pw_spin_delay_pico/: BUILD.gn  delay.cc
pw_sys_io_pico/: BUILD.gn  sys_io_pico.cc
pw_sys_io_pico/public/pw_sys_io_pico/: init.h
targets/pico/: BUILD.gn  init.cc  pico_executable.gni  target_toolchains.gni
targets/pico_base/: target_toolchains.gni
