# Copyright 2021 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/python.gni")
import("$dir_pw_tokenizer/database.gni")
import("$dir_pw_unit_test/test.gni")

# Lists all the targets build by default with e.g. `ninja -C out`.
group("default") {
  deps = [
    ":host",
    ":pico",
    ":python",

    # ":python.lint",
    # ":python.tests",
  ]
}

# Group all targets that run on host only, e.g. tests, utils.
group("host") {
  deps = [
    # No host tests yet
    # ":host_tests(//targets/host:host_debug_tests)"
    # elf2uf2 Host tool
    "//third_party/elf2uf2:elf2uf2(//targets/host:host_debug)",
  ]
}

group("pico") {
  deps = [
    # Typical pico executables use the pico_debug toolchain.
    "//applications/blinky:blinky(//targets/pico:pico_debug)",
    "//pico_build(//targets/pico:pico_debug)",

    # bs2_default uses the pico_base_debug toolchain.
    "//pico_build/bs2_default(//targets/pico_base:pico_base_debug)",
  ]
}

# Python packages are built using the host toolchain.
pw_python_group("python") {
  # This depends on the 'tools' target in //tools/BUILD.gn
  python_deps = [
    "tools",
    "//pico_build/py:py",
    "//third_party/pigweed/pw_env_setup:python",
    "//third_party/pigweed/pw_env_setup:target_support_packages",
  ]
}
