# Copyright 2021 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

# import("//targets/common_backends.gni")

import("$dir_pw_toolchain/arm_gcc/toolchains.gni")

target_toolchain_pico_base = {
  _excluded_members = [
    "defaults",
    "name",
  ]

  pico_base_debug = {
    name = "pico_base_debug"
    _toolchain_base = pw_toolchain_arm_gcc.cortex_m0plus_size_optimized
    forward_variables_from(_toolchain_base, "*", _excluded_members)
    final_binary_extension = ".elf"
    defaults = {
      forward_variables_from(_toolchain_base.defaults, "*")

      # # Configure backend for pw_board_led
      # pw_board_led_BACKEND = "$dir_pw_board_led_pico"

      # # Configure backend for pw_spin_delay
      # pw_spin_delay_BACKEND = "$dir_pw_spin_delay_pico"
    }
  }

  # # Toolchain for tests only.
  # pico_base_debug_tests = {
  #   name = "pico_base_debug_tests"
  #   _toolchain_base = pw_target_toolchain_pico.debug
  #   forward_variables_from(_toolchain_base, "*", _excluded_members)
  #   defaults = {
  #     forward_variables_from(_toolchain_base.defaults, "*")
  #     forward_variables_from(toolchain_overrides, "*")

  #     # Force tests to use basic log backend to avoid generating and loading its
  #     # own tokenized database.
  #     pw_log_BACKEND = dir_pw_log_basic
  #   }
  # }
}

toolchains_list = [
  target_toolchain_pico_base.pico_base_debug,
  # target_toolchain_pico.pico_base_debug_tests,
]
